2009-xx-xx  Sebastien Vincent <sebastien.vincent@cppextrem.com>

  * Version 0.2     : - Possibility to compile with debug symbols;
                      - Add simple JSON-RPC TCP and UDP examples;
                      - Add unit tests (with CppUnit);
                      - Add scons help documentation (scons -h);
                      - Add JsonRpc-Cpp version in jsonrpc.h;
                      - Add JsonCpp installation howto.

2009-03-10  Sebastien Vincent <sebastien.vincent@cppextrem.com>

  * Version 0.1.3   : - Port to MacOS X;
                      - Fix a valgrind error;
                      - Scons doxygen target is always built.

2008-11-17  Sebastien Vincent <sebastien.vincent@cppextrem.com>

  * Version 0.1.2   : - Fix undecoded netstring in TcpServer;
                      - Fix "system.describe" response structure ("result" field);
                      - Add doxygen command for scons.

2008-09-22	Sebastien Vincent <sebastien.vincent@cppextrem.com>
	
	* Initial version.
